--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body> <img id="img2" src="https://catbox.moe/pictures/logo_white.png">
-<a href="sp.html">
+    <a href="sp.html">d</a>
     <br>
     <br>
     <br>
