--- a/index.html
+++ b/index.html
@@ -2,51 +2,77 @@
 <html>
 
 <head>
-    <title>Brief introduction</title>
+    <title>Hi</title>
     <link rel="icon" href="favicon.png">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body> <img id="img2" src="https://catbox.moe/pictures/logo_white.png">
-    <a href="sp.html">d</a>
+<body>
+    <ul id="nav">
+        <img src="hd.png" id="hd">
+        <a href="#">📖 Brief introduction</a>
+        <a href="setup.html">🏗️ Setting up</a>
+        <a href="sp.html">🪄 Special usage</a>
+    </ul>
     <br>
     <br>
-    <br>
-    <br>
-    <p>class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style
-        class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class
-        style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style
-        class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class
-        style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style
-        class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class
-        style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style class style
-        class style class style class style </p>
-    <div class="parent">
-        <a href="https://google.com/" id="link">Google</a>
-        <img id="img1" src="https://catbox.moe/pictures/logo_white.png">
-        <div class="a">----A----</div>
-        <div class="b">----B----</div>
-        <div class="c">----C----</div>
-        <div style="margin-top:100em">
-            <p>----D----</p>
+    <div class="rows">
+        <h1>
+            A brief introduction to <a class="hl">WireGuard</a>
+        </h1>
+        <hr class="solid">
+        <div class="col">
+            <h2>Properties</h2>
+            <ul>
+                <li>Pure <b>UDP</b> (avoid some disadvantages of TCP-in-TCP)</li>
+                <li>Data encrypted using <b>ChaCha20-Poly1305</b> algorithm (better performance on ARM devices than AES, while slower on x86 devices)</li>
+                <li>Extremely lightweight</li>
+                <li>Integrated in the latest Linux kernel</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h2>Performance</h2>
+            <a class="lnk" href="https://www.wireguard.com/performance/">Performance - WireGuard<br><br></a>
+            <table id="pftb">
+                <p> WireGuard - <a class="hl">1010</a> mbps</p>
+                <p> IPsec (ChaCha20-Poly1305) - <a class="hl">824</a> mbps</p>
+                <p> IPsec (AES-GCM) - <a class="hl">880</a> mbps</p>
+                <p> OpenVPN - <a class="hl">257</a> mbps</p>
+            </table><br>
+            <p>Notes: in this WireGuard official test, a MTU value over <a class="hl">9000</a> is taken, while the usual scenario would be
+                <a class="hl">1500</a> or lower.
+            </p>
+            <br>
+            <br>
+        </div>
+        <div class="col">
+            <h2>My experience</h2>
+            <ul>
+                <li>From school network <b>(Bell Canada)</b> to <b>GCP
+                    (Toronto)</b>: 11 MBps comparing to the 14 MBps speed limit set by school
+                </li>
+                <li>From <b>Jiangsu, China (China Telecom)</b> to <b>BandwagonHost
+                    (US West CN2-GIA)</b>: over 200 MBps comparing to the 300 MBps bandwidth, neen in use since October for Telegram messaging and video calls from my parents, also an Ethereum mining rig.</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h2>Public proxy services</h2>
+            <ul>
+                <li>Cloudflare WARP(<a class="lnk" href="https://1.1.1.1">1.1.1.1</a>) uses BoringTun, which is their implementation of WireGuard in rust.</li>
+                <li>VPN providers like ProtonVPN, Mullvad, VyprVPN and more are providing WireGuard services now.</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h2>Anti-censorship</h2>
+            <ul>
+                <li>Background information: as for real VPN protocols, GFW would detect and block OpenVPN, IPsec, L2TP and many more VPN protocols. They do speed limits on AnyConnect VPN protocol by Cisco instead of blocking it, but block its open source
+                    implementation OpenConnect.
+                </li>
+                <li>No limit is set on WireGuard protocol till now, considering it's rarely used to bypass censorship.</li>
+                <li>However, it's easy to block WireGuard traffic in sensitive periods, comparing to existing anti-censorship solutions that uses real TLS packets.</li>
+            </ul>
         </div>
     </div>
-    <ul>
-        <li>class</li>
-        <li>style</li>
-        <li>class</li>
-        <li>style</li>
-        <li>popup</li>
-        <li>style</li>
-        <li>class</li>
-        <li>style</li>
-        <li>popup</li>
-    </ul>
-    <ol>
-        <li>class</li>
-        <li>style</li>
-        <li>popup</li>
-    </ol>
 </body>
 
 </html>
