--- a/sp.html
+++ b/sp.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Special usage</title>
+    <title>Hi</title>
     <link rel="icon" href="favicon.png">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
